--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -47,6 +47,7 @@
       padding: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
     }
     section p {
       font-size: 1.125rem;
@@ -61,6 +62,17 @@
     footer {
       text-align: center;
       font-size: 0.9rem;
+    }
+    /* Visually hidden class for accessibility */
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0,0,0,0);
+      border: 0;
     }
   </style>
 </head>
