--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TechCon 2024 Conference</title>
   <style>
-    /* Basic styling for layout and accessibility */
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -63,7 +62,6 @@
       text-align: center;
       font-size: 0.9rem;
     }
-    /* Visually hidden class for accessibility */
     .sr-only {
       position: absolute;
       width: 1px;
@@ -88,7 +86,8 @@
   </header>
 
   <main>
-    <section aria-labelledby="intro-heading">
+    <!-- Added explicit role and ensured section is directly inside main -->
+    <section role="region" aria-labelledby="intro-heading">
       <h2 id="intro-heading">Welcome to TechCon 2024</h2>
       <p>
         Join us at TechCon 2024, the premier technology conference bringing together industry leaders, innovators, and enthusiasts from around the globe. Explore cutting-edge trends, attend inspiring talks, and network with professionals in a vibrant and inclusive environment.
