--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -52,11 +52,23 @@
       font-size: 1.125rem;
       margin-bottom: 1rem;
     }
-    video {
-      width: 100%;
-      max-width: 100%;
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
       border-radius: 8px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      margin-bottom: 1rem;
+    }
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      border-radius: 8px;
     }
     footer {
       text-align: center;
@@ -86,25 +98,27 @@
   </header>
 
   <main>
-    <!-- Added explicit role and ensured section is directly inside main -->
-    <section role="region" aria-labelledby="intro-heading">
+    <section aria-labelledby="intro-heading">
       <h2 id="intro-heading">Welcome to TechCon 2024</h2>
       <p>
         Join us at TechCon 2024, the premier technology conference bringing together industry leaders, innovators, and enthusiasts from around the globe. Explore cutting-edge trends, attend inspiring talks, and network with professionals in a vibrant and inclusive environment.
       </p>
-      <video controls preload="metadata" aria-describedby="video-desc" tabindex="0">
-        <source src="promo-video.mp4" type="video/mp4" />
-        <track kind="subtitles" src="promo-video-subtitles.vtt" srclang="en" label="English" default />
-        Your browser does not support the video element.
-      </video>
+      <div class="video-container" aria-describedby="video-desc">
+        <iframe 
+          src="https://www.youtube.com/embed/B_-HF-RNdjw" 
+          title="TechCon 2024 Promotional Video"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
       <p id="video-desc" class="sr-only">
-        Promotional video for TechCon 2024 showcasing keynote speakers, workshops, and networking events.
+        Promotional video for TechCon 2024 showcasing keynote speakers, workshops, and networking events. Captions are available on YouTube.
       </p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 TechCon Conference. All rights reserved.</p>
+    <p>© 2025 TechCon Conference. All rights reserved. Copyright.</p>
   </footer>
 </body>
 </html>
