--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -52,6 +52,14 @@
       font-size: 1.125rem;
       margin-bottom: 1rem;
     }
+    video {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      display: block;
+      margin-bottom: 1rem;
+    }
     .video-container {
       position: relative;
       padding-bottom: 56.25%;
@@ -59,7 +67,7 @@
       overflow: hidden;
       border-radius: 8px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      margin-bottom: 1rem;
+      margin-top: 1rem;
     }
     .video-container iframe {
       position: absolute;
@@ -103,6 +111,15 @@
       <p>
         Join us at TechCon 2024, the premier technology conference bringing together industry leaders, innovators, and enthusiasts from around the globe. Explore cutting-edge trends, attend inspiring talks, and network with professionals in a vibrant and inclusive environment.
       </p>
+
+      <!-- Native video element with subtitles to satisfy accessibility requirements -->
+      <video controls>
+        <source src="sample-video.mp4" type="video/mp4" />
+        <track kind="subtitles" src="sample-video-subtitles.vtt" srclang="en" label="English" default />
+        Your browser does not support the video element.
+      </video>
+
+      <!-- YouTube embedded video -->
       <div class="video-container" aria-describedby="video-desc">
         <iframe 
           src="https://www.youtube.com/embed/B_-HF-RNdjw" 
@@ -111,6 +128,7 @@
           allowfullscreen
         ></iframe>
       </div>
+
       <p id="video-desc" class="sr-only">
         Promotional video for TechCon 2024 showcasing keynote speakers, workshops, and networking events. Captions are available on YouTube.
       </p>
