updated index.html file after checking it through the w3c validator

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TechCon 2024 Conference</title>
   <style>
     body {
@@ -114,8 +114,8 @@
 
       <!-- Native video element with subtitles to satisfy accessibility requirements -->
       <video controls>
-        <source src="sample-video.mp4" type="video/mp4" />
-        <track kind="subtitles" src="sample-video-subtitles.vtt" srclang="en" label="English" default />
+        <source src="sample-video.mp4" type="video/mp4">
+        <track kind="subtitles" src="sample-video-subtitles.vtt" srclang="en" label="English" default>
         Your browser does not support the video element.
       </video>
 
