--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -70,6 +70,8 @@
       height: auto;
       margin-right: 1rem;
       flex-shrink: 0;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
     }
     .speaker-info {
       max-width: calc(100% - 130px);
@@ -97,7 +99,7 @@
       <p>
         TechCon started in 2010 as a small gathering of technology enthusiasts and has grown into one of the largest annual tech conferences worldwide. Over the years, it has evolved to include workshops, keynote speeches, and networking events that foster innovation and collaboration.
       </p>
-      <img src="images/history-photo.jpg" alt="Historic photo of the first TechCon conference attendees" />
+      <img src="images/history-photo.jpg" alt="Historic photo of the first TechCon conference attendees">
     </article>
 
     <article aria-labelledby="mission-heading">
@@ -105,14 +107,14 @@
       <p>
         Our mission is to inspire and empower the global tech community by providing a platform for sharing knowledge, showcasing innovations, and building lasting professional relationships. We strive to create an inclusive environment where everyone can learn and grow.
       </p>
-      <img src="images/mission-icon.png" alt="Icon representing innovation and collaboration" />
+      <img src="images/mission-icon.png" alt="Icon representing innovation and collaboration">
     </article>
 
     <article aria-labelledby="speakers-heading">
       <h2 id="speakers-heading">Past Speakers</h2>
 
       <div class="speaker">
-        <img src="images/speaker-jane-doe.jpg" alt="Photo of Jane Doe" />
+        <img src="images/speaker-jane-doe.jpg" alt="Photo of Jane Doe">
         <div class="speaker-info">
           <h3>Jane Doe</h3>
           <p>Jane is a pioneer in artificial intelligence, known for her groundbreaking research in machine learning algorithms that revolutionized data processing and automation.</p>
@@ -120,7 +122,7 @@
       </div>
 
       <div class="speaker">
-        <img src="images/speaker-john-smith.jpg" alt="Photo of John Smith" />
+        <img src="images/speaker-john-smith.jpg" alt="Photo of John Smith">
         <div class="speaker-info">
           <h3>John Smith</h3>
           <p>John is a cybersecurity expert who has contributed extensively to developing secure communication protocols and educating the community on digital safety.</p>
@@ -128,7 +130,7 @@
       </div>
 
       <div class="speaker">
-        <img src="images/speaker-anna-lee.jpg" alt="Photo of Anna Lee" />
+        <img src="images/speaker-anna-lee.jpg" alt="Photo of Anna Lee">
         <div class="speaker-info">
           <h3>Anna Lee</h3>
           <p>Anna is a software engineer and open-source advocate, recognized for her leadership in large-scale software projects and community-driven development.</p>
