--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -112,9 +112,17 @@
         Join us at TechCon 2024, the premier technology conference bringing together industry leaders, innovators, and enthusiasts from around the globe. Explore cutting-edge trends, attend inspiring talks, and network with professionals in a vibrant and inclusive environment.
       </p>
 
+      <!-- Native video element with subtitles to satisfy accessibility requirements -->
+      <video controls>
+        <source src="sample-video.mp4" type="video/mp4">
+        <track kind="subtitles" src="sample-video-subtitles.vtt" srclang="en" label="English" default>
+        Your browser does not support the video element.
+      </video>
+
+      <!-- YouTube embedded video -->
       <div class="video-container" aria-describedby="video-desc">
-        <iframe
-          src="https://www.youtube.com/embed/B_-HF-RNdjw"
+        <iframe 
+          src="https://www.youtube.com/embed/B_-HF-RNdjw" 
           title="TechCon 2024 Promotional Video"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
