--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -164,7 +164,7 @@
   </main>
 
   <footer>
-    <p>© 2025 TechCon Conference. All rights reserved. Copyright.</p>
+    <p>© 2025 TechCon Conference. All rights reserved. copyright.</p>
   </footer>
 </body>
 </html>
