--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -106,7 +106,7 @@
   </header>
 
   <main>
-    <section aria-labelledby="intro-heading">
+    <section>
       <h2 id="intro-heading">Welcome to TechCon 2024</h2>
       <p>
         Join us at TechCon 2024, the premier technology conference bringing together industry leaders, innovators, and enthusiasts from around the globe. Explore cutting-edge trends, attend inspiring talks, and network with professionals in a vibrant and inclusive environment.
