--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -119,7 +119,7 @@
 
   <main>
     <!-- Article 1: History of TechCon -->
-    <article id="history">
+    <article>
       <h2>History of TechCon</h2>
       <p>
         TechCon began in 2018 as a small gathering of local tech enthusiasts and
@@ -140,7 +140,7 @@
     </article>
 
     <!-- Article 2: Mission of TechCon -->
-    <article id="mission">
+    <article>
       <h2>Our Mission</h2>
       <p>
         At TechCon, our mission is to accelerate technological progress and foster a
@@ -173,7 +173,7 @@
     </article>
 
     <!-- Article 3: Past Speakers -->
-    <article id="past-speakers">
+    <article>
       <h2>Notable Past Speakers</h2>
       <div class="speaker-profile">
         <img src="https://placehold.co/100x100/cce6ff/004080?text=Dr.+Ava+Chen" alt="Portrait of Dr. Ava Chen">
