--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -201,7 +201,7 @@
       </div>
 
       <div class="form-group">
-        <label for="userMessage">Your Message:</label>
+        <label for="userMessage">Message:</label>
         <textarea id="userMessage" name="userMessage" required></textarea>
       </div>
 
