Had capitalized 'm' on line 204. Corrected it to 'm'

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -201,7 +201,7 @@
       </div>
 
       <div class="form-group">
-        <label for="userMessage">Message:</label>
+        <label for="userMessage">message:</label>
         <textarea id="userMessage" name="userMessage" required></textarea>
       </div>
 
